src/styles/profile.scss
$gray: #828081;
$darkgray: #1e2224;
$black: #161b1d;
$white: #ffffff;

.profile {
  padding: 50px 0;
  display: flex;
  &__about {
    width: 30%;

    display: flex;
    flex-direction: column;
    row-gap: 10px;
    &_avatar {
      width: 300px;
      height: 300px;
      border-radius: 50%;
      background-position: center;
      background-size: cover;
      background-repeat: no-repeat;
      border: 4px $gray solid;
      display: flex;
      align-items: center;
      justify-content: center;
      position: relative;
      & > svg{
        width: 100%;
        height: 100%;
        color: $gray;
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translate(-50%,-50%);
      }
      & > label {
        z-index: 0;
        max-width: 80%;
        min-width: 0;
        background: $white;
        border: none;
        transition: 0.2s;
        & span.file-types {
          display: none;
        }
      }
      &.active {
        & > label {
          opacity: 0;
          &:hover {
            opacity: 1;
            pointer-events: all;
          }
        }
      }
    }
    &_name {
      font-size: 35px;
      line-height: 40px;
      
      color: $white;
    }
    &_email {
      font-size: 18px;

      color: $gray;
    }
  }
  &__reviews {
    width: 70%;
    &_title {
      display: flex;
      align-items: center;
      column-gap: 5px;
      font-size: 25px;
      margin-bottom: 20px;
      padding: 5px 10px;
      color: $white;
      & > svg {
        color: $white;
      }
    }
    &_container {
      display: grid;
      grid-template-columns: repeat(2, 1fr);
      grid-auto-rows: 220px;
      gap: 20px;
      padding: 20px;
      border-radius: 35px;
      background-color: $darkgray;
    }
  }
}

